updated ad API verbs and corresponding documentation
